# SysinternalsEBPF

./: BUILD.md  CMakeLists.txt  INSTALL.md  README.md  azure-pipelines.yml  discoverOffsets.c  discoverOffsets.h  generateUnameOffsets.py  hexdump.c  hexdump.h  installer.c  libsysinternalsEBPF.h  libsysinternalsEBPFinstaller.c  makePackages.sh  memDumpShared.h  offsetsNeeded.json  searchOffsets.c  searchOffsets.h  syscalls.h  sysinternalsEBPF.h  sysinternalsEBPFshared.h  telemetryLoader.c
.container/: install-ubuntu-dependencies.sh
.github/workflows/: build.yml  scorecard.yml
ebpfKern/: sysinternalsEBPF_common.h  sysinternalsEBPF_helpers.c  sysinternalsEBPFmemDump.c  sysinternalsEBPFrawSock.c
getOffsets/: Makefile  README.md  extractOffsets.c  getOffsets.c
offsets/: README.md
package/DEBIAN/: postinst  postrm  prerm
package/DEBIAN.in/: control.in
package/SPECS.in/: spec.in  specrpm.in
package/usr/share/man/man3/: sysinternalsebpf.3
templates/: build.yaml
